# rippo-shop2

./: .gitignore  add_car_image.py  avito.json  brands.json  key.json  parse_cars.py  parse_generations.py  parse_modif.py  parse_spacers.py  pyproject.toml  spacers.json  upd_cars.json  upd_cars2.json
cars-parser/cars-parser/: brands.json  brands2.json  brands3.json  brands4.json  parse_brands.py  parse_cars.py  parse_generations.py  parse_picture.py  pyproject.toml
cart/: cart.html  style.css
header (2)/header/: header.html
header (2)/header/css/: style.css
machine/: machine.html
machine/css/: style.css
src/: wsgi.py
src/about/: urls.py
src/about/templates/: about.html
src/avito/: api_client.py  apps.py
src/base_static/: apps.py
src/cars/: admin.py  models.py  urls.py  views.py
src/cart/: cart.py  urls.py  views.py
src/catalogue/: urls.py  views.py
src/config/: settings.py  urls.py
src/contacts/: urls.py  views.py
src/feedbacks/: urls.py  views.py
src/landing/: views.py
src/orders/: urls.py  views.py
src/payment_delivery/: apps.py  urls.py  views.py
src/questions/: views.py
src/spacers/: admin.py  apps.py  models.py  urls.py  views.py
src/templates/: base.html  x
src/users/: admin.py  models.py
trade/cart/: cart.html  style.css
trade/header/: header.html
trade/index-menu/: index-menu.html
trade/modal/: index.html
trade/pay/: pay.html
trade/prostavka/: prostavka.html  style.css
trade/select-menu/: select-menu.html
trade/ДАСТАВКА/: index.html
trade/О КОМПАНИИ/: index.html
trade/ОТЗИВЫ/: index.html
(+45 files in other folders)
