[tool.poetry]
name = "rippo-shop"
version = "0.1.0"
description = ""
authors = ["0xshodan <hngdean@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
psycopg = "^3.1.8"

[tool.poetry.dev-dependencies]
ruff = "^0.0.263"
django-debug-toolbar = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
