[tool.poetry]
name = "cars-parser"
version = "0.1.0"
description = ""
authors = ["0xshodan <hngdean@gmail.com>"]
readme = "README.md"
packages = [{include = "cars_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
aiohttp = "^3.8.4"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
